# Operating-System-CSE-314-BUET

./: .gitignore  README.md
IPC/: Thread.rar
IPC/CakeFactory/: CMakeLists.txt  CakeFactory.cpp  prod_cons_with_mutex.cpp  prod_cons_without_mutex.cpp  semaphore.cpp  simple_thread.cpp
IPC/Materials/Thread/: prod_cons_with_mutex.cpp  prod_cons_without_mutex.cpp
IPC/Materials/process/fork/: fork4.c  fork7.c
IPC/Materials/process/semaphore/: sem1.c
IPC/Materials/process/sharedmemory/: shm1.c
IPC/Online/: CMakeLists.txt  SemaphoreUtils.h  SharedMem.h  main.cpp
IPC/Prac/Semaphore/: CMakeLists.txt  functions.txt  main.cpp
IPC/Prac/SharedMemory/: CMakeLists.txt  SharedMem.h  client.cpp  host.cpp
Shell Commands/: 1+2.txt  2.txt  Bash Commands.txt  atxtb.sh  find.sh  grep.sh
Shell Script/Assignment1/: 1505015.sh  absent.txt  data.sh  findAbsents.sh  findFiles.sh  findID.sh  main.sh  marks.txt  unzipAll.sh  unzipEach.sh  util.sh
Shell Script/Assignment1/Assignment1 Test/Bonus Output/: AbsenteeList.txt  Marks.txt
Shell Script/Materials/: args.sh  arithmetic.sh  conditionalStmts.sh  function.sh  printVarInString.sh  script1.sh
Shell Script/PracProblem/: abc.txt  deleteAllFilesWithPattern.sh  digits.sh  file.txt  prob1.sh  prob5.sh  test.txt
Shell Script/online/: script.sh
Shell Script/online/test/: test1.txt  test2.txt  test3.txt
xv6-Development/xv6/: Makefile  README.md  defs.h  fs.c  kalloc.c  param.h  proc.c  proc.h  subangkar.c  subangkar_shanto.c  swapUtils.h  syscall.c  syscall.h  sysproc.c  trap.c  types.h  umalloc.c  user.h  usys.S  vm.c  ztest.c
(+30 files in other folders)
